# clusters

./: .gitignore  .gitmodules  AUTHORS  Makefile.am  common.am  configure.ac  configure.ac.acxmpi  configure.sh  gen_job.sh  make_conf.sh  small.job
include/: tuple_space.h  tuple_space_helpers.h  utils.h
lib/: Makefile.am  tuple_space.c  utils.c
lu-decomposition/: Makefile.am  main.c
lua/: app.lua
m4/: configure.ac.acxmpi
speedtest/: Makefile.am  main.c  speedtest.c  speedtest.h
tuple_space/: Makefile.am  main.c
